--- a/app/src/main/res/layout/app_toolbar.xml
+++ b/app/src/main/res/layout/app_toolbar.xml
@@ -30,7 +30,19 @@
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#ced1ce">
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        app:cardCornerRadius="5dp"
+        android:layout_marginTop="10dp">
     <com.smarteist.autoimageslider.SliderView
         android:id="@+id/imageSlider"
         android:layout_width="match_parent"
@@ -49,201 +61,29 @@
         app:sliderIndicatorUnselectedColor="#FFF"
         app:sliderScrollTimeInSec="1"
         tools:ignore="MissingConstraints" />
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-
-       android:orientation="horizontal">
-      <androidx.cardview.widget.CardView
-          android:layout_width="95dp"
-          android:layout_height="110dp"
-          android:id="@+id/men_card"
-          android:layout_margin="3dp"
-          android:layout_weight="4"
-          app:cardBackgroundColor="#FFFFFF"
-         >
-          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
-
-              <RelativeLayout
-                  android:layout_width="wrap_content"
-                  android:layout_height="wrap_content">
-
-                  <ImageView
-                      android:id="@+id/mens_category_img_id"
-                      android:layout_width="match_parent"
-                      android:adjustViewBounds="true"
-                      android:scaleType="centerCrop"
-                      android:layout_height="90dp"
-                      android:src="@drawable/men" />
-              </RelativeLayout>
-
-              <RelativeLayout
-                  android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-
-                  >
-
-                  <TextView
-                      android:id="@+id/mens_category_txt_id"
-                      android:layout_width="wrap_content"
-                      android:layout_height="wrap_content"
-                      android:layout_centerInParent="true"
-                      android:text="Men's"
-                      android:textFontWeight="@integer/config_navAnimTime"
-                      android:textColor="@color/colorPrimary"
-                      android:textSize="13dp" />
-              </RelativeLayout>
-          </LinearLayout>
-      </androidx.cardview.widget.CardView>
-       <androidx.cardview.widget.CardView
-           android:layout_width="95dp"
-           android:layout_height="110dp"
-
-           android:layout_margin="3dp"
-           android:layout_weight="4"
-           app:cardBackgroundColor="#FFFFFF"
-
-           tools:ignore="MissingConstraints">
-
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:orientation="vertical">
-
-               <RelativeLayout
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content">
-
-                   <ImageView
-                       android:id="@+id/womens_category_img_id"
-                       android:layout_width="match_parent"
-                       android:layout_height="90dp"
-                       android:adjustViewBounds="true"
-                       android:scaleType="centerCrop"
-                       android:src="@drawable/women"/>
-               </RelativeLayout>
-
-               <RelativeLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-
-                   >
-
-                   <TextView
-                       android:id="@+id/womens_category_txt_id"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_centerInParent="true"
-                       android:text="Women's"
-                       android:textFontWeight="@integer/config_navAnimTime"
-                       android:textColor="@color/colorPrimary"
-                       android:textSize="13dp" />
-               </RelativeLayout>
-           </LinearLayout>
-
-       </androidx.cardview.widget.CardView>
-
-       <androidx.cardview.widget.CardView
-           android:layout_width="95dp"
-           android:layout_height="110dp"
-
-           android:layout_margin="3dp"
-           android:layout_weight="4"
-           app:cardBackgroundColor="#FFFFFF"
-
-           tools:ignore="MissingConstraints">
-
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:orientation="vertical">
-
-               <RelativeLayout
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content">
-
-                   <ImageView
-                       android:id="@+id/kids_category_img_id"
-                       android:layout_width="match_parent"
-                       android:adjustViewBounds="true"
-                       android:scaleType="centerCrop"
-                       android:layout_height="90dp"
-                       android:src="@drawable/kid" />
-               </RelativeLayout>
-
-               <RelativeLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-
-                   >
-
-                   <TextView
-                       android:id="@+id/kids_category_txt_id"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_centerInParent="true"
-                       android:text="Kid's"
-                       android:textFontWeight="@integer/config_navAnimTime"
-                       android:textColor="@color/colorPrimary"
-                       android:textSize="13dp" />
-               </RelativeLayout>
-           </LinearLayout>
-
-       </androidx.cardview.widget.CardView>
-
-       <androidx.cardview.widget.CardView
-           android:layout_width="95dp"
-           android:layout_height="110dp"
-
-           android:layout_margin="3dp"
-           android:layout_weight="4"
-           app:cardBackgroundColor="#FFFFFF"
-
-           tools:ignore="MissingConstraints">
-
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:orientation="vertical">
-
-               <RelativeLayout
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content">
-
-                   <ImageView
-                       android:id="@+id/accessories_category_img_id"
-                       android:layout_width="match_parent"
-                       android:adjustViewBounds="true"
-                       android:scaleType="centerCrop"
-                       android:layout_height="90dp"
-                       android:src="@drawable/accessories" />
-               </RelativeLayout>
-
-               <RelativeLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="match_parent"
-
-                   >
-
-                   <TextView
-                       android:id="@+id/accessories_category_txt_id"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:layout_centerInParent="true"
-                       android:text="Accessories"
-                       android:textFontWeight="@integer/config_navAnimTime"
-                       android:textColor="@color/colorPrimary"
-
-                       android:textSize="13dp" />
-               </RelativeLayout>
-           </LinearLayout>
-
-       </androidx.cardview.widget.CardView>
-   </LinearLayout>
-
+    </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="5dp"
+      android:background="#c6d97f"
+      >
+      <androidx.recyclerview.widget.RecyclerView
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/category_List"
+          android:layout_marginEnd="1dp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+  </LinearLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    >
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -253,6 +93,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
+</LinearLayout>
 
 </LinearLayout>
