--- a/app/src/main/res/layout/article_card_suggetion.xml
+++ b/app/src/main/res/layout/article_card_suggetion.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="110dp"
     android:layout_height="140dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -69,4 +69,4 @@
 
     </LinearLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
