--- a/app/src/main/res/layout/card_article_layout.xml
+++ b/app/src/main/res/layout/card_article_layout.xml
@@ -7,6 +7,10 @@
     android:layout_margin="5dp"
 
  >
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/shimmer_view_container">
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -78,5 +82,5 @@
     </LinearLayout>
 
   </LinearLayout>
-
+    </com.facebook.shimmer.ShimmerFrameLayout>
 </com.google.android.material.card.MaterialCardView>
